Fixing overflow and mobile first bugs

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -53,9 +53,9 @@
     }
 
     .circle1 {
-      width: 30%;
+      width: 28%;
       position: absolute;
-      top: 40%;
+      top: 34%;
       right: 47%;
     }
 
