--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -24,6 +24,10 @@
   align-items: center;
   padding: 30px 0;
 
+  h2 {
+    text-align: center;
+  }
+
   svg,
   img {
     width: 100%;
@@ -36,20 +40,7 @@
   .wrapper {
     justify-content: center;
     flex-direction: column;
-
-    &:nth-child(even) {
-      align-items: flex-end;
-    }
-   }
-
-  &:nth-child(even) {
-      h2 {
-          text-align: right;
-      }
-
-      ul {
-          float: right;
-      }
+    align-items: center;
   }
 
   ul {
@@ -71,10 +62,8 @@
       text-align: justify;
   }
 
-  &:nth-child(even) {
-      h2 {
-          text-align: right;
-      }
+  h2 {
+      text-align: center;
   }
 
   svg {
@@ -87,5 +76,6 @@
 
   figure {
     order: 1;
+    min-height: 280px;
   }
 }
