--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,11 @@
 $font_path: '~@/assets/fonts/';
 $img_path: '~@/assets/';
 
-// General styles
+@import '_colors';
+@import "~bootstrap/scss/bootstrap";
+
+// Fonts
+
 @font-face {
   font-family: CamingoCode-Reg;
   src: url($font_path + 'CamingoCode-Regular.ttf');
@@ -10,16 +14,19 @@ $img_path: '~@/assets/';
 @font-face {
   font-family: CamingoCode-Bold;
   src: url($font_path + 'CamingoCode-Bold.ttf');
+
 }
 
-@import '_colors';
-@import "~bootstrap/scss/bootstrap";
-
+// General styles
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'CamingoCode-Reg', Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'CamingoCode-Reg', Arial, Helvetica, sans-serif
+}
+
+p, li {
+  font-size: 1.1em;
 }
 
 html,
@@ -28,18 +35,11 @@ body,
   width: 100%;
 }
 
-// #app,
-// .services,
-// .skills {
-//   overflow: hidden;
-// }
-
-body {
-  background-color: rgb(241, 241, 241);
-}
-
 main {
   padding: 0 5%;
+  margin-top: 100vh;
+  width: 100%;
+  background: rgb(241, 241, 241);
 }
 
 h1,
@@ -51,19 +51,20 @@ h4 {
 }
 
 .banner {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     padding: 50px;
 
-    overflow: hidden;
-
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    z-index: -1;
 }
 
 section {
 
   padding: 50px 0;
+  overflow: hidden;
 
   h1 {
     text-decoration: underline;
@@ -80,7 +81,7 @@ nav {
   .logo {
     width: 50px;
   }
-
+  width: 100vw;
 
 }
 
